--- a/main-page/views/home/quickviewmodal.ejs
+++ b/main-page/views/home/quickviewmodal.ejs
@@ -1,70 +1,78 @@
-      <!-- quick view modal -->                  
-      <div class="modal fade" id="quick-view-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">                      
-            <div class="modal-body">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <div class="row">
-                <!-- Modal view slider -->
-                <div class="col-md-6 col-sm-6 col-xs-12">                              
-                  <div class="aa-product-view-slider">                                
-                    <div class="simpleLens-gallery-container" id="demo-1">
-                      <div class="simpleLens-container">
-                          <div class="simpleLens-big-image-container">
-                              <a class="simpleLens-lens-image" >
-                                  <img id="showImg" src="" class="simpleLens-big-image">
-                              </a>
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Modal view content -->
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                  <div class="aa-product-view-content">
-                    <h3>Tên sản phẩm</h3>
-                    <div class="aa-price-block">
-                      <span class="aa-product-view-price">Giá tiền</span>
-                      <p class="aa-product-avilability">Tình trạng: <span>Hàng có sẵn</span></p>
-                    </div>
-                    <p>Mô tả sản phẩm</p>
-                    <h4>Size</h4>
-                    <div class="aa-prod-view-size">
-                      <a href="#">S</a>
-                      <a href="#">M</a>
-                      <a href="#">L</a>
-                      <a href="#">XL</a>
-                    </div>
-                    <div class="aa-prod-quantity">
-                      <form action="">
-                        <select name="" id="">
-                          <option value="0" selected="1">1</option>
-                          <option value="1">2</option>
-                          <option value="2">3</option>
-                          <option value="3">4</option>
-                          <option value="4">5</option>
-                          <option value="5">6</option>
-                        </select>
-                      </form>
-                      <p class="aa-prod-category">
-                        Loại: <a href="#"></a>
-                      </p>
-                    </div>
-                    <div class="aa-prod-view-bottom">
-                      <a href="#" class="aa-add-to-cart-btn"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
-                      <a id="linkProduct" href="" class="aa-add-to-cart-btn">Chi tiết</a>
-                    </div>
-                  </div>
+<!-- quick view modal -->
+<div class="modal fade" id="quick-view-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-body">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <div class="row">
+        <!-- Modal view slider -->
+        <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="aa-product-view-slider">
+            <div class="simpleLens-gallery-container" id="demo-1">
+              <div class="simpleLens-container">
+                <div class="simpleLens-big-image-container">
+                  <a class="simpleLens-lens-image">
+                    <img id="showImg" width="250px" height="300px" src="" class="simpleLens-big-image">
+                  </a>
                 </div>
               </div>
-            </div>                        
-          </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-      </div><!-- / quick view modal -->              
-  </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
+            </div>
+          </div>
+        </div>
+        <!-- Modal view content -->
+        <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="aa-product-view-content">
+            <h3 id="showName"></h3>
+            <div class="aa-price-block">
+              <span class="aa-product-view-price" id="showPrice">Giá tiền: </span>
+              <p class="aa-product-avilability">Tình trạng: <span>Hàng có sẵn</span></p>
+            </div>
+            <p id="showDescription">Mô tả sản phẩm:
+            </p>
+            <h4>Size</h4>
+            <div class="aa-prod-view-size">
+              <a href="#" onclick="selectedSize(this.text)">S</a>
+              <a href="#" onclick="selectedSize(this.text)">M</a>
+              <a href="#" onclick="selectedSize(this.text)">L</a>
+              <a href="#" onclick="selectedSize(this.text)">XL</a>
+            </div>
+            <div class="aa-prod-quantity">
+              
+              <p class="aa-prod-category" id="showCategory">
+                Loại: <a href="#"></a>
+              </p>
+            </div>
+            <div class="aa-prod-view-bottom">
+              <a href="#"onclick="addproduct(tmp_productID,tmp_categoryID,tmp_image,tmp_name,tmp_price,tmp_size)" class="aa-add-to-cart-btn"><span class="fa fa-shopping-cart"></span>Thêm vào
+                giỏ hàng</a>
+              <a id="linkProduct" href="" class="aa-add-to-cart-btn">Chi tiết</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- / quick view modal -->
+<script>
+  var tmp_image, tmp_name,tmp_price,tmp_size,tmp_categoryID,tmp_productID;
+  function selectedSize(value){
+    tmp_size=value;
+  }
+
+  function clickSearch(categoryID,image, productID, productName, sellPrice, description, categoryName) {
+    tmp_categoryID=categoryID;
+    tmp_productID=productID;
+    tmp_image=image;
+    tmp_name=productName;
+    tmp_price=sellPrice;
+    document.getElementsByClassName("simpleLens-lens-image")[0].src = image;
+    document.getElementById("showImg").src = image;
+    document.getElementById("linkProduct").href = "/products/detail?id=" + productID;
+    document.getElementById("showName").textContent = productName;
+    document.getElementById("showPrice").textContent = 'Giá: ' + sellPrice;
+    document.getElementById("showDescription").textContent = 'Mô tả: ' + description;
+    document.getElementById("showCategory").textContent = 'Loại: ' + categoryName;
+  }
+</script>
