delete tab checkout, edit page checkout

--- a/main-page/views/checkout/checkout.ejs
+++ b/main-page/views/checkout/checkout.ejs
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 
-  <body>    
+  <body>  
+    <script>
+      function submitButton(){
+        
+      }
+      </script>  
+    
 
   <!-- catg header banner section -->
   <section id="aa-catg-head-banner">
@@ -37,22 +44,20 @@
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                            Đăng nhập 
+                            Thông tin giao hàng
                           </a>
                         </h4>
                       </div>
                       <div id="collapseTwo" class="panel-collapse collapse">
                         <div class="panel-body">
-                          <input type="text" placeholder="Username or email">
-                          <input type="password" placeholder="Password">
-                          <button type="submit" class="aa-browse-btn">Đăng nhập</button>
-                          <label for="rememberme"><input type="checkbox" id="rememberme"> Ghi nhớ </label>
-                          <p class="aa-lost-password"><a href="#">Quên mật khẩu?</a></p>
+                          <input type="text" placeholder="Email">
+                          <input type="text" placeholder="Địa chỉ">
+                          <button onclick="submitButton()">Xác nhận</button>
                         </div>
                       </div>
                     </div>
                     <!-- Billing Details -->
-                    <div class="panel panel-default aa-checkout-billaddress">
+                    <!-- <div class="panel panel-default aa-checkout-billaddress">
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
@@ -151,9 +156,9 @@
                           </div>                                    
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     <!-- Shipping Address -->
-                    <div class="panel panel-default aa-checkout-billaddress">
+                    <!-- <div class="panel panel-default aa-checkout-billaddress">
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
@@ -260,9 +265,9 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
-              </div>
+              </div> 
               <div class="col-md-4">
                 <div class="checkout-right">
                   <h4>Chi Tiết Hóa Đơn</h4>
@@ -298,13 +303,13 @@
                       </tfoot>
                     </table>
                   </div>
-                  <h4>Cách thức thanh toán</h4>
+                  <!-- <h4>Cách thức thanh toán</h4>
                   <div class="aa-payment-method">                    
                     <label for="cashdelivery"><input type="radio" id="cashdelivery" name="optionsRadios"> Tiền Mặt </label>
                     <label for="paypal"><input type="radio" id="paypal" name="optionsRadios" checked> Paypal </label>
                     <img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark">    
                     <input type="submit" value="Place Order" class="aa-browse-btn">                
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
