--- a/main-page/views/common/header.ejs
+++ b/main-page/views/common/header.ejs
@@ -19,7 +19,7 @@
               </div>
               <!-- / logo  -->
                <!-- cart box -->
-              <div class="aa-cartbox">
+              <!-- <div class="aa-cartbox">
                 <a class="aa-cart-link" href="#">
                   <span class="fa fa-shopping-basket"></span>
                   <span class="aa-cart-title">GIỎ HÀNG</span>
@@ -54,7 +54,7 @@
                   </ul>
                   <a class="aa-cartbox-checkout aa-primary-btn" href="/check-out">Thanh toán</a>
                 </div>
-              </div>
+              </div> -->
               <!-- / cart box -->
               <!-- search box -->
               <div class="aa-search-box">
