--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -3,6 +3,39 @@
         <div class="loader"></div>
     </div>
 </div>
+<!-- ############################### FORGOT PASS SECTION ###############################-->
+<div id="dlgforgotpass" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="padding-top: 10%;">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Reset Mật Khẩu</h4>
+            </div>
+
+            <div class="modal-body">
+                <form action="#" method="POST" onsubmit="return handleForgotPass(event);" id="formforgotpass">
+                    <div class="form-group">
+                        <label for="username" class="control-label">Tên Đăng Nhập:</label>
+                        <input type="text" class="form-control" id="username" name="username" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="control-label">Email:</label>
+                        <input type="text" class="form-control" id="email" name="email" required />
+                    </div>
+
+                    <button type="submit" class="btn btn-info">Xác Nhận</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- ############################### END FORGOT PASS SECTION ###############################-->
 
 <!-- ############################### USER ACCOUNT SECTION ###############################-->
 <div id="dlginsertuser" class="modal fade" role="dialog">
