[admin-page] handle verify new regis user

--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -78,6 +78,7 @@
             </a>
             <ul class="treeview-menu">
               <li><a href="/user"><i class="fa fa-user"></i>Quản Trị Viên</a></li>
+              <li><a href="/notverified"><i class="fa fa-user"></i>Yêu Cầu Xác Thực</a></li>
               <li><a href="/customer"><i class="fa fa-user"></i>Khách Hàng</a></li>
             </ul>
           </li>
