--- a/admin-page/views/common/script.ejs
+++ b/admin-page/views/common/script.ejs
@@ -26,6 +26,7 @@
 <script src="handlers/userDetailHandler.js"></script>
 <script src="handlers/customerHandler.js"></script>
 <script src="handlers/orderHandler.js"></script>
+<script src="handlers/userNotVerifiedHandler.js"></script>
 <script src="handlers/utils.js"></script>
 
 <!-- wrap word in datatable cell -->
